# commerce_hub_api

./: .gitignore  README.md  env_exaple  main.py  pyproject.toml
admin/: __init__.py  auth.py  product.py  user.py
database/: __init__.py  base.py  category.py  comment.py  product.py  support.py  user.py
root/: config.py
routers/: __init__.py  auth.py  category.py  comment.py  product.py  users.py
schemas/: product.py  user.py
services/: otp_services.py
templates/: login.html  osm_map.html  osm_map_display.html  verification_email.html
utils/: jwt_token.py  utils.py
