[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "orjson>=3.11.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.11.10",
    "python-jose>=3.5.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
